# project_business_data_science

./: .gitignore  Business Data Science Project Airbnb new test.ipynb  Business Data Science Project Airbnb.ipynb  README.md  pyproject.toml  requirements.txt
